<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.openclassrooms.mareu.ui.AddReuActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/color"
            android:src="@drawable/custom_circle_100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
             />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/datePickerLyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:background="@drawable/custom_date_background"
            android:clickable="true"
            android:inputType="none"
            android:textColorHint="#767676"
            android:hint="Pick a date">
        </TextView>

        <TextView
            android:id="@+id/timePickerLyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:background="@drawable/custom_date_background"
            android:clickable="true"
            android:inputType="none"
            android:textColorHint="#767676"
            android:hint="Pick an hour">
        </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="16dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Emails"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:text="Ajouter"
                android:textSize="12sp">
            </Button>

        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutItLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutIt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:minLines="4"
                android:ems="10"
                android:hint="About the meeting"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center"
            app:cornerRadius="20dp"
            android:layout_marginTop="24dp"
            android:text="Save"/>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>