<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.openclassrooms.mareu.ui.ListReuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorAccent"

            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.openclassrooms.mareu.ui.ListReuActivity"
        tools:listitem="@layout/item_recycler_view" />

    <TextView
        android:id="@+id/recycler_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/pas_de_reunion"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="#EBDF0000"
        app:srcCompat="@drawable/ic_baseline_add_white_24dp" />


    <!--</LinearLayout>-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>