<resources>
    <string name="app_name">Ma réu</string>
    <string name="settings">settings</string>
    <string name="filtrer_par_date">Filtrer par date</string>
    <string name="filtrer_par_salle">Filtrer par salle</string>
    <string name="salle_mario">Salle Mario</string>
    <string name="salle_luigi">Salle Luigi</string>
    <string name="salle_wario">Salle Wario</string>
    <string name="salle_waluigi">Salle Waluigi</string>
    <string name="salle_boo">Salle Boo</string>
    <string name="salle_donkeykong">Salle DonkeyKong</string>
    <string name="no_filter">No Filter</string>
    <string name="pas_de_reunion">Il n\'y a pas de réunion à afficher!</string>

</resources>