...
        android:id="@+id/item_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_date"
        app:layout_constraintLeft_toRightOf="@+id/item_list_avatar"
        />

    <TextView
        android:id="@+id/item_list_date"
        android:layout_width="wrap_content"
...
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_list_emails"
        app:layout_constraintLeft_toRightOf="@+id/item_list_name"
        />

    <TextView
        android:id="@+id/item_list_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/item_list_date"
        app:layout_constraintBottom_toTopOf="@id/item_list_emails"
...
