...
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.openclassrooms.mareu.ui.ListReuActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom">

        <menu>

...
